@@ -1,3 +1,12 @@
+20040127
+ - (djm) OpenBSD CVS Sync
+   - hshoexer@cvs.openbsd.org 2004/01/23 17:06:03
+     [cipher.c]
+     enable acss for ssh
+     ok deraadt@ markus@
+ - (djm) [acss.c acss.h cipher-acss.c] Portable support for ACSS 
+   if libcrypto lacks it
+
 20040126
  - (tim) Typo in regress/README.regress
  - (tim) [regress/test-exec.sh] RhostsAuthentication is deprecated.
